<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="textColor">#815F3D</string>
    <string name="app_name">文化圈</string>
      <string name="btn_close_guide">进入文化圈</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ashamed_detail">AshamedDetailActivity</string>
    <string name="title_activity_send_comment">SendCommentActivity</string>
    <string name="action_contact">Contact</string>
    <string name="attention">关注</string>
    <string name="forum_list_thread_tv">讨论</string>
    <string name="forum_detail_info_brief_title">简介</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="forum_detail_ht_title">相关热帖</string>
    <string name="content_description_icon">icon</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="addnl">正能量</string>
    <string name="text_login">登陆</string>  
    <string name="description_cacheImage">缓存大图</string>
    <string name="pls_insert_sdcard">请插入sd卡</string>   
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="more">更多</string>
    <string name="loading">正在加载...</string>
    <string name="upload_photo">传道</string>
    <string name="upload_shouye">授业</string>
    <string name="upload_help">解惑</string>
    <string name="upload_renwu">星人物</string>
    <string name="upload_baijia">星文化</string>
	<string name="type_chuandao">传承文化，分享经典</string>	
	<string name="type_shouye">知行要合一，写下自己践行的过程和感悟</string>	
	<string name="type_yihuo">提出自己的疑惑，让北极星的小伙伴来为你解答吧</string>
	<string name="gongguoxu">  是以功过格多是修身养性，成道立言之类。自思长此以往，世人必将成就一身功德，留名千古。
余虽不为扬名，但其必将互为因果，此为必然。盖结整其章，是为功德一也。
引金瓶梅序曰：读功格而生忧惧心者，逸人也；生豪情心者，英雄也；生恭敬心者，凡人也；生效法心者，乃勇者耳。读过格而生怜悯心者，菩萨也；生畏惧心者，君子也；生欢喜心者，小人也；生效法心者，乃禽兽耳。
九秋曾言：无心之过非过，有心之功非功。功过由己，是非随心。然始终功过有别，是以无心过，名为错。有心过，名为恶。无心功，名为赞。有心功，名为善。
有过而不为，非功，有功而不为，非过。
虽说过无大小，功亦无大小。为正其义，余皆以事定其功过也。
一念过，便觉百行皆非。万善功，始得一生无愧。昨日之过不可留，留之则根烬复萌，而尘情终累乎理趣；今日之功不可执，执之则渣滓未化，而理趣反转为欲根。
是以功过只可日记月记年记，只可记功记过，而不可记其事。</string>
	
    <string name="location_add">添加地理位置</string>
    <string name="text_rember">记住密码</string>  
    <string name="one_key_login">使用合作帐号登录 / 注册</string>
    <string name="always">赚取代币</string>
    <string name="usercenter">用户中心</string>
    <string name="category">兑换中心</string>
    <string name="gamecenter">游戏中心</string>
    <string name="more_app">更多设置</string>
    <string name="entry_baijia">进入</string>
    <string name="user_info_forum_energy_value">文化值</string>
     <string name="self_intro">个人简介</string>
     <string name="user_exit">退出当前账号</string>
	<string name="my_dialog_loading">Loading</string>
	<string name="point">温馨提示</string>
	<string name="exit_message">你确定要退出吗？</string>
	<string name="exit_ok">确定</string>
	<string name="exit_cancle">取消</string>
	<string name="error_system_message">系统错误</string>
	
    <string name="haha">mymoney</string>
    <string name="done">完成</string>
    <string name="clear">清除</string>
    <string name="listview_data_loading">正在加载数据...</string>
    <string name="listview_empty">没有数据</string>
    <string name="back_btn">返回</string>
    <string name="edit_btn">编辑</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="spn_prompt_category">类别</string>
    <string name="spn_prompt_subcategory">子类别</string>
    <string name="spn_prompt_account">账户</string>
    <string name="spn_prompt_corporation">商家</string>
    <string name="spn_prompt_project">项目</string>
    <string name="add_user">添加用户</string>
    <string name="add_expense_quickly">随手记一笔</string>
    <string name="list_expense">流水</string>
    <string name="nav_add_expense">记账</string>
    <string name="nav_report">报表</string>
    <string name="nav_planning">计划</string>
    <string name="nav_budget">预算</string>
    <string name="nav_account">账户</string>
    <string name="nav_setting">设置</string>
    <string name="search">搜索</string>
    <string name="take_pic">拍照</string>
    <string name="sync_or_not">是否同步</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="add">添加</string>
    <string name="password_setting">密码保护</string>
    <string name="delete_title">删除提示</string>
    <string name="delete_message">是否删除该记录?</string>
    <string name="delete">删除</string>
    <string name="delete_cancel">取消</string>
    <string name="account_canot_delete">账户不允许删除,请先清空该账户有关的所有消费记录</string>
    <string name="category_canot_delete">分类不允许删除,请先清空该分类有关的子分类和消费记录</string>
    <string name="corporation_canot_delete">商家不允许删除,请先清空该商家有关的所有消费记录</string>
    <string name="magic_code">0</string>
    <string name="budget_max_expense_tips">本月总预算金额</string>
    <string name="budget_category_expense_tips">设置月分类预算金额</string>

	<!-- memo——MyDialog -->
	<string name="dialog_memo_title">备注</string>
	<string name="dialog_memo_ok">保存</string>
	<string name="dialog_memo_cancle">取消</string>
	
	<!-- MainActivity -->
    <string name="text_title_today">流水清单-按天</string>
    <string name="text_title_week">流水清单-按周</string>
    <string name="text_title_month">流水清单-按月</string>
	
    <!-- TransactionTabActivity -->
    <string name="input_message">请填写金额</string>
    <string name="edit_message">编辑成功</string>
    <string name="save_message">保存成功</string>
    <string name="edit_in">编辑收入</string>
    <string name="edit_out">编辑支出</string>
    
    <!-- NavExpenseActivity -->
    <string name="message_error_system">系统错误</string>
    <string name="message_delete_ok">删除成功.</string>
    <string name="message_error_edit">抱歉,只有收入和支出记录可以编辑</string>
    
    <!-- SettingAddOrEditAccountActivity -->
    <string name="edit_point">自动计算,无需设定</string>
    <string name="error_user_empty">账户名不能为空</string>
    <string name="error_user_there">对不起,该账户已经存在!</string>
    <string name="error_balance_empty">余额不能为空</string>
    <string name="error_balance_number">余额数据填写不正确,只能为数字</string>
    <string name="error_system">抱歉,软件故障,操作失败.</string>
    
    <!-- TransferActivity -->
    <string name="transfer_amount_empty">金额不能为空</string>
    <string name="transfer_amount_0">金额不能为0</string>
    <string name="transfer_amount_number">金额数据填写不正确,只能为数字</string>
    <string name="transfer_ok">转账成功</string>
    
    <!-- Budget -->
    <string name="balance_amount_title">余额：</string>
    <string name="budget_ok">预算设置成功</string>
</resources>