<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root" 
    android:background="@color/cp_bg_line_c" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
     	xmlns:app="http://schemas.android.com/apk/res-auto" >

    <ImageView android:id="@+id/refresh_image" 
        android:layout_width="@dimen/ds68" 
        android:layout_height="@dimen/ds68" 
        android:layout_marginTop="@dimen/ds22" 
        android:src="@drawable/icon_pop_refresh" 
        android:scaleType="centerCrop" 
        android:visibility="gone"
        android:layout_centerHorizontal="true" 
        android:contentDescription="@string/content_description_icon" />
    <RelativeLayout android:id="@+id/head" 
        android:layout_width="fill_parent" 
        android:layout_height="190dip" 
        android:background="@drawable/personal_desk"
        android:layout_marginBottom="@dimen/ds50">
        <LinearLayout android:orientation="horizontal" 
            android:id="@+id/person_info" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="@dimen/ds38" 
            android:layout_marginTop="@dimen/ds82">
            <LinearLayout android:gravity="center" 
                android:background="@drawable/bg_mycenter_avatar"
                 android:layout_width="@dimen/ds148"
                  android:layout_height="@dimen/ds148">
            <com.qlhui.thoughtlight.myview.RoundedImageView 
		      android:id="@+id/user_head"
			  android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
		      android:src="@drawable/defaulticon"
		      android:layout_margin="@dimen/ds4" 
		      android:scaleType="centerCrop" 
		   
		      app:corner_radius="@dimen/image_avatar_size_large"
		      app:border_width="0dip"
		      app:oval="false"
		      app:border_color="#fff"
		      />    
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds14">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">

                    <TextView android:textSize="@dimen/ds36" 
                        android:textColor="@color/cp_cont_g"
                         android:id="@+id/user_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <ImageView android:id="@+id/user_sex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds4" android:scaleType="fitXY" android:contentDescription="@string/content_description_icon" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ds8">
                    <TextView android:textSize="@dimen/ds28" 
                        android:textColor="@color/cp_cont_g" 
                        android:id="@+id/user_bar_age" 
                        android:layout_width="wrap_content" android:layout_height="wrap_content" 
                        android:text="@string/user_info_forum_energy_value" />
                    <TextView android:textSize="@dimen/ds28"
                         android:textColor="@color/cp_cont_g" 
                         android:id="@+id/user_bar_age_num" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                 
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds38" android:layout_marginTop="@dimen/ds28" android:layout_marginRight="@dimen/ds30" android:layout_below="@+id/person_info">
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/cp_cont_g" android:gravity="center" android:id="@+id/btn_attention" 
                android:background="@drawable/bg_mycenter_bar" android:layout_width="@dimen/ds150" android:layout_height="wrap_content" android:text="@string/attention" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/dis_time" android:background="@drawable/bg_mycenter_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds16">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds10" android:layout_weight="1.0">
                    <ImageView android:id="@+id/iv_site" android:background="@drawable/icon_mycenter_bar_site" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/content_description_icon" />
                    <TextView android:textSize="@dimen/ds28" android:textColor="@color/cp_cont_g" android:gravity="center" android:id="@+id/distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds10" android:text="--" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/time_ll" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:id="@+id/iv_time" android:background="@drawable/icon_mycenter_bar_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/content_description_icon" />
                    <TextView android:textSize="@dimen/ds28" android:textColor="@color/cp_cont_g" android:id="@+id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ds10" android:text="--" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>