<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" 
    android:background="@drawable/drop_iphone" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/common_bg"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:batteryView="http://schemas.android.com/apk/res/com.mymoney">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12.0dip"
        android:paddingTop="27.0dip" >

        <LinearLayout
            android:id="@+id/month_expense_ly"
            android:layout_width="220.0dip"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:layout_marginTop="9.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/month_tv"
                    style="@style/main_budget_lable_hdpi"
                    android:layout_marginLeft="35.0dip"
                    android:textSize="20.0dip"
                    android:textStyle="bold" />

                <TextView
                    style="@style/main_budget_lable_hdpi"
                    android:layout_marginLeft="4.0dip"
                    android:text="月:"
                    android:textSize="20.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:layout_marginTop="22.0dip"
                android:orientation="horizontal" >

                <TextView
                    style="@style/main_money_label_hdpi"
                    android:text="正能量:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/income_amount_tv"
                    style="@style/main_money_hdpi"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:orientation="horizontal" >

                <TextView
                    style="@style/main_money_label_hdpi"
                    android:text="负能量:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/expense_amount_tv"
                    style="@style/main_money_hdpi"
                    android:textColor="@color/white" />
            </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                   android:layout_weight="1.0" 
                android:orientation="horizontal" >

                <TextView
                    style="@style/main_money_label_hdpi"
                    android:text="总能量:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/budget_sum_amount_tv"
                    style="@style/main_money_hdpi"
                    android:textColor="@color/white" />
            </LinearLayout>
    
        </LinearLayout>

        <com.qlhui.suishouji.utility.MyProcessBar
            android:id="@+id/budget_pb"
            android:layout_width="66dp"
            android:layout_height="173dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20.0dip"
            android:gravity="bottom"
            android:visibility="gone"
            android:paddingTop="66.0dip" >

        </com.qlhui.suishouji.utility.MyProcessBar>
        <!--
             <com.mymoney.ui.widget.BatteryView android:id="@+id/budget_status_bv" android:background="@drawable/widget_battery_bg" 
				android:focusable="true" android:clickable="true" android:layout_width="115.0dip" android:layout_height="205.0dip" 
				android:layout_marginLeft="2.0dip" android:layout_marginTop="20.0dip" batteryView:frameRate="1" batteryView:animationDurationTime="3000" 
				batteryView:contentWidth="92" batteryView:contentHeight="183" batteryView:contentPaddingLeft="11" batteryView:contentPaddingRight="11" 
				batteryView:contentPaddingTop="11" batteryView:contentPaddingBottom="11" batteryView:batteryContentTopImage="@drawable/widget_battery_top"
 				batteryView:batteryContentMiddleImage="@drawable/widget_battery_middle" batteryView:batteryContentBottomImage="@drawable/widget_battery_bottom" 
 				batteryView:batteryContentLowImage="@drawable/widget_battery_low" batteryView:overlayerImage="@drawable/widget_battery_overlayer" 
 				/>
        -->
    </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                   android:layout_weight="2.0" 
                android:orientation="horizontal" >

                <TextView
                    style="@style/main_money_label_hdpi"
                    android:text="人生时间:"
                    android:textColor="@color/white" />
			<com.qlhui.thoughtlight.myview.RushBuyCountDownTimerView
			        android:id="@+id/timerView"
			        android:layout_gravity="center"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >
			    </com.qlhui.thoughtlight.myview.RushBuyCountDownTimerView>
      
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2.0" 
                android:orientation="horizontal" >
		    	 <Button 
		           android:id="@+id/add_gong_btn"
		           android:background="@drawable/gongbt"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		            android:layout_weight="1.0" 
		           android:text="记功"
		           android:layout_marginTop="0.0dip" />
    			<Button 
		            android:id="@+id/add_guo_btn"
		            android:background="@drawable/guobt"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		             android:layout_weight="1.0" 
		            android:text="记过"
		            android:layout_marginTop="0.0dip" />
    
    
            </LinearLayout>
    <Button android:background="@drawable/common_transparence" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_weight="1.0" />
    <FrameLayout android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
         >
        <LinearLayout android:orientation="vertical"
             android:layout_width="fill_parent"
              android:layout_height="fill_parent">
            <RelativeLayout android:orientation="horizontal" android:id="@+id/today_row_rl" style="@style/row_stat_hdpi">
                <FrameLayout android:id="@+id/today_icon_fl" style="@style/main_row_stat_icon_hdpi">
                    <ImageView android:layout_gravity="center_vertical" android:id="@+id/today_icon_iv" android:background="@drawable/main_today" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textColor="@color/black" android:layout_gravity="center_horizontal" android:id="@+id/date_of_month_tv" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </FrameLayout>
                <LinearLayout android:layout_toRightOf="@+id/today_icon_fl" style="@style/main_row_stat_time_ly_hdpi">
                    <TextView android:id="@+id/today_tv" android:text="今天" style="@style/main_row_stat_time_tips_hdpi" />
                    <TextView android:id="@+id/today_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
                </LinearLayout>
                <TextView android:id="@+id/today_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                <TextView android:id="@+id/today_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@+id/week_row_rl" style="@style/row_stat_hdpi">
                <ImageView android:id="@+id/week_icon_iv" android:background="@drawable/main_week" style="@style/main_row_stat_icon_hdpi" />
                <LinearLayout android:layout_toRightOf="@+id/week_icon_iv" style="@style/main_row_stat_time_ly_hdpi">
                    <TextView android:text="本周" style="@style/main_row_stat_time_tips_hdpi" />
                    <TextView android:id="@+id/week_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
                </LinearLayout>
                <TextView android:id="@+id/week_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                <TextView android:id="@+id/week_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi" />
            </RelativeLayout>
            <RelativeLayout android:id="@+id/month_row_rl" 
                android:nextFocusDown="@+id/nav_add_expense_btn" 
                style="@style/row_stat_hdpi">
                <ImageView android:id="@+id/month_icon_iv" 
                    android:background="@drawable/main_month" 
                    style="@style/main_row_stat_icon_hdpi" />
                <LinearLayout android:layout_toRightOf="@+id/month_icon_iv" style="@style/main_row_stat_time_ly_hdpi">
                    <TextView android:text="本月" style="@style/main_row_stat_time_tips_hdpi" />
                    <TextView android:id="@+id/month_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
                </LinearLayout>
                <TextView android:id="@+id/month_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                <TextView android:id="@+id/month_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:id="@+id/nav_ly" 
             android:visibility="gone"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView style="@style/nav_bar_bg_hdpi" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" 
             android:visibility="gone"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">
            <Button android:id="@+id/add_expense_btn" android:background="@drawable/main_add_expense_btn" android:visibility="gone" style="@style/nav_btn_hdpi" />
            <Button android:id="@+id/nav_report_btn" android:background="@drawable/main_report_btn" android:visibility="gone" style="@style/nav_btn_hdpi" />
            <Button android:id="@+id/nav_account_btn" 
                android:background="@drawable/main_account_btn" 
                style="@style/nav_btn_hdpi" 
                android:layout_marginLeft="30dp"/>
            <Button android:id="@+id/nav_budget_btn" 
                android:background="@drawable/main_budget_btn"  
                style="@style/nav_btn_hdpi"  
                android:layout_marginLeft="60dp"/>
            <Button android:id="@+id/nav_setting_btn" android:background="@drawable/main_setting_btn" style="@style/nav_btn_hdpi" android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
             android:visibility="gone"
            >
            <TextView android:id="@+id/add_expense_tv" android:visibility="gone" android:text="@string/nav_add_expense" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_report_tv" android:text="@string/nav_report" android:visibility="gone" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_account_tv" android:text="@string/nav_account" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_budget_tv" android:text="@string/nav_budget" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_setting_tv" android:text="@string/nav_setting" android:visibility="gone" style="@style/nav_text_hdpi" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>